--- a/manifest.yml
+++ b/manifest.yml
@@ -1,9 +1,9 @@
 applications:
-- name: attendee-service
+- name: attendee-service-blue
   instances: 1
   memory: 1024M
   disk_quota: 1024M
-  random-route: true
+  route: attendee-service-blue-ss.apps.cumuluslabs.io
   stack: cflinuxfs2
   path: target/attendee-service-0.0.1-SNAPSHOT.jar
   services:
